--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -175,11 +175,14 @@ h6 {
 	text-transform: uppercase;
 	font-size: 1.1rem;
 
-	@include breakpoint(large) {
+	@include breakpoint(medium) {
 		font-size: 1.2rem;
 	}
-	@include breakpoint(xlarge) {
+	@include breakpoint(large) {
 		font-size: 1.3rem;
+	}
+	@include breakpoint(xlarge) {
+		font-size: 1.4rem;
 	}
 	
 }
@@ -224,6 +227,20 @@ blockquote {
 
 }
 
+blockquote + h6 {
+	margin-top: 1.5rem;
+
+	@include breakpoint(medium) {
+		margin-top: 1.75rem;
+	}
+	@include breakpoint(large) {
+		margin-top: 2rem;
+	}
+	@include breakpoint(xlarge) {
+		font-size: 1.4rem;
+	}
+	
+}
 
 
 
