--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -4090,35 +4090,33 @@ body.is-reveal-open {
 
 h1 {
   font-family: "adobe-caslon-pro",serif;
-  font-size: 5.5vmax; }
+  font-size: 2.2rem; }
   @media screen and (min-width: 28.75em) {
     h1 {
       font-size: 7.5vw;
+      letter-spacing: -0.1rem; } }
+  @media screen and (min-width: 47.9375em) {
+    h1 {
       letter-spacing: -0.1rem; } }
   @media screen and (min-width: 80em) {
     h1 {
       font-size: 6rem; } }
 
-.sham-modal h1,
-.news-article h1 {
-  font-size: 4.76vmax; }
-  @media screen and (min-width: 28.75em) {
-    .sham-modal h1,
-    .news-article h1 {
-      font-size: 6.3vw; } }
-  @media screen and (min-width: 80em) {
-    .sham-modal h1,
-    .news-article h1 {
-      font-size: 6rem; } }
+@media screen and (min-width: 28.75em) {
+  .sham-modal h1,
+  .news-article h1 {
+    font-size: 7.5vw; } }
+@media screen and (min-width: 80em) {
+  .sham-modal h1,
+  .news-article h1 {
+    font-size: 6rem; } }
 
-.news-highlights h1 {
-  font-size: 4.76vmax; }
-  @media screen and (min-width: 28.75em) {
-    .news-highlights h1 {
-      font-size: 6.3vw; } }
-  @media screen and (min-width: 80em) {
-    .news-highlights h1 {
-      font-size: 5rem; } }
+@media screen and (min-width: 28.75em) {
+  .news-highlights h1 {
+    font-size: 6.3vw; } }
+@media screen and (min-width: 80em) {
+  .news-highlights h1 {
+    font-size: 5rem; } }
 
 .desktop-video-wrapx h1,
 .mobile-static-wrapx h1 {
@@ -4811,7 +4809,7 @@ a.view-more.up {
   content: '';
   left: 0px;
   right: 0px;
-  top: 36vh;
+  top: 50vh;
   border-width: 1rem 50vw;
   margin-left: -20px;
   margin-right: 15px;
@@ -5226,6 +5224,9 @@ figcaption a.btn-play:hover {
 .padding-7-3-7-3 {
   padding: 7vh 3vw; }
 
+.padding-8-0-8-0 {
+  padding: 8vh 0; }
+
 .padding-12-4-12-4 {
   padding: 12vh 4vw; }
 
@@ -5276,9 +5277,9 @@ figcaption a.btn-play:hover {
 .parent-categories a,
 .child-categories a {
   color: #8b8782;
-  display: block;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  display: inline-block;
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
   -webkit-transition: color 0.375s linear;
   transition: color 0.375s linear; }
   @media screen and (min-width: 28.75em) {
@@ -5286,7 +5287,8 @@ figcaption a.btn-play:hover {
     .child-categories span,
     .parent-categories a,
     .child-categories a {
-      display: inline-block; } }
+      padding-left: 0.5rem;
+      padding-right: 0.5rem; } }
 
 .child-categories span,
 .child-categories a {
