--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -4104,18 +4104,18 @@ h1 {
 
 @media screen and (min-width: 28.75em) {
   .sham-modal h1,
+  .news-highlights h1,
   .news-article h1 {
     font-size: 7.5vw; } }
+@media screen and (min-width: 47.9375em) {
+  .sham-modal h1,
+  .news-highlights h1,
+  .news-article h1 {
+    font-size: 6.5vw; } }
 @media screen and (min-width: 80em) {
   .sham-modal h1,
+  .news-highlights h1,
   .news-article h1 {
-    font-size: 6rem; } }
-
-@media screen and (min-width: 28.75em) {
-  .news-highlights h1 {
-    font-size: 6.3vw; } }
-@media screen and (min-width: 80em) {
-  .news-highlights h1 {
     font-size: 5rem; } }
 
 .desktop-video-wrapx h1,
@@ -4323,7 +4323,7 @@ li.reduced-text {
       font-size: 1.45rem; } }
 
 small {
-  font-size: 0.9375rem; }
+  font-size: 1rem; }
 
 p a {
   color: #3a454b;
@@ -5027,10 +5027,24 @@ img.full-width {
 .news-highlights h5,
 .news-article h1,
 .news-article h5 {
-  margin-bottom: 2rem; }
+  margin-bottom: 3rem; }
 
 .news-article .reduced-text h6 {
   margin-bottom: 0.5rem; }
+
+/* NEWS: SINGLE ENTRY PAGE 
+======================================================================== */
+.news-article .sidebar p {
+  font-size: 1rem; }
+  @media screen and (min-width: 28.75em) {
+    .news-article .sidebar p {
+      font-size: 1.1rem; } }
+  @media screen and (min-width: 47.9375em) {
+    .news-article .sidebar p {
+      font-size: 1.15rem; } }
+  @media screen and (min-width: 80em) {
+    .news-article .sidebar p {
+      font-size: 1.2rem; } }
 
 /* STORIES: SINGLE ENTRY PAGE 
 ======================================================================== */
@@ -5217,6 +5231,9 @@ figcaption a.btn-play:hover {
 
 .padding-4-0-4-0 {
   padding: 4vh 0; }
+
+.padding-6-0-6-0 {
+  padding: 6vh 0; }
 
 .padding-7-0-7-0 {
   padding: 7vh 0; }
