--- a/_scss/custom/_spacing.scss
+++ b/_scss/custom/_spacing.scss
@@ -66,8 +66,16 @@
 	padding: 7vh 3vw;
 }
 
+.padding-8-0-0-0 {
+	padding: 8vh 0 0 0;
+}
+
 .padding-8-0-8-0 {
 	padding: 8vh 0;
+}
+
+.padding-12-0-3-0 {
+	padding: 12vh 0 3vh 0;
 }
 
 .padding-12-4-12-4 {
