--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -81,7 +81,7 @@ h1 {
 
 h2 {
 	font-family: "adobe-caslon-pro",serif;
-	font-size: 2rem;
+	font-size: 2.1rem;
    
 	@include breakpoint(medium) {
 		font-size: 6.5vw;
@@ -324,10 +324,9 @@ small {
 p a {
 	color: $warm-gray-1;
 	transition: color 0.375s linear;
-}
-
-p a:hover {
-	color: #000;
+	&:hover {
+		color: #000;
+	}
 }
 
 
