change skews to original, tweak spacing and h1/h2

--- a/_scss/custom/_spacing.scss
+++ b/_scss/custom/_spacing.scss
@@ -10,7 +10,7 @@
 // proportional padding (top-right-bot-left)............................
 
 .padding-x-x-3-x {
-	padding-bottom: 3vh;
+	padding-bottom: 3vw;
 }
 
 .padding-x-3-x-3 {
@@ -19,75 +19,79 @@
 }
 
 .padding-0-0-3-0 {
-	padding: 0 0 3vh 0;
+	padding: 0 0 3vw 0;
 }
 
 .padding-3-0-0-0 {
-	padding: 3vh 0 0 0;
+	padding: 3vw 0 0 0;
 }
 
 .padding-3-0-3-0 {
-	padding: 3vh 0;
+	padding: 3vw 0;
 }
 
 .padding-3-x-x-x {
-	padding-top: 3vh;
+	padding-top: 3vw;
 }
 
 .padding-0-0-4-0 {
-	padding-bottom: 4vh;
+	padding-bottom: 4vw;
 }
 
 .padding-x-x-4-x {
-	padding-bottom: 4vh;
+	padding-bottom: 4vw;
 }
 
 .padding-4-x-x-x {
-	padding-top: 4vh;	
+	padding-top: 4vw;	
 }
 
 .padding-4-0-0-0 {
-	padding-top: 4vh;
+	padding-top: 4vw;
 }
 
 .padding-4-0-4-0 {
-	padding: 4vh 0;
+	padding: 4vw 0;
 }
 
 .padding-6-0-6-0 {
-	padding: 6vh 0;
+	padding: 6vw 0;
 }
 
 .padding-7-0-7-0 {
-	padding: 7vh 0;
+	padding: 7vw 0;
 }
 
 .padding-7-3-7-3 {
-	padding: 7vh 3vw;
+	padding: 7vw 3vw;
 }
 
 .padding-8-0-0-0 {
-	padding: 8vh 0 0 0;
+	padding: 8vw 0 0 0;
 }
 
 .padding-8-0-8-0 {
-	padding: 8vh 0;
+	padding: 8vw 0;
 }
 
 .padding-12-0-3-0 {
-	padding: 12vh 0 3vh 0;
+	padding: 12vw 0 3vw 0;
 }
 
 .padding-12-4-12-4 {
-	padding: 12vh 4vw;
+	padding: 12vw 4vw;
+}
+
+.padding-15-0-7-0 {
+	padding: 15vw 0 7vw 0;
+}
+
+.padding-15-0-3-0 {
+	padding: 15vw 0 3vw 0;
 }
 
 .padding-15-10-15-10 {
-	padding: 15vh 10vw;
-}
-
-.padding-18-0-7-0 {
-	padding: 18vh 0 7vh 0;
+	padding: 15vw 10vw;
 }
 
 
