--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -4103,17 +4103,28 @@ h1 {
       font-size: 6rem; } }
 
 @media screen and (min-width: 28.75em) {
-  .sham-modal h1,
-  .news-highlights h1,
-  .news-article h1 {
+  .sham-modal h1 {
     font-size: 7.5vw; } }
 @media screen and (min-width: 47.9375em) {
-  .sham-modal h1,
+  .sham-modal h1 {
+    font-size: 6.5vw; } }
+@media screen and (min-width: 80em) {
+  .sham-modal h1 {
+    font-size: 5rem; } }
+
+@media screen and (max-width: 600px) {
+  .news-highlights h1,
+  .news-article h1 {
+    font-size: 2.2rem; } }
+@media screen and (min-width: 601px) and (max-width: 767px) {
+  .news-highlights h1,
+  .news-article h1 {
+    font-size: 3rem; } }
+@media screen and (min-width: 47.9375em) {
   .news-highlights h1,
   .news-article h1 {
     font-size: 6.5vw; } }
 @media screen and (min-width: 80em) {
-  .sham-modal h1,
   .news-highlights h1,
   .news-article h1 {
     font-size: 5rem; } }
@@ -4136,9 +4147,14 @@ h1 {
       font-size: 10rem; } }
 
 h2 {
-  font-family: "adobe-caslon-pro",serif;
-  font-size: 2.1rem; }
-  @media screen and (min-width: 28.75em) {
+  font-family: "adobe-caslon-pro",serif; }
+  @media screen and (max-width: 600px) {
+    h2 {
+      font-size: 2.2rem; } }
+  @media screen and (min-width: 601px) and (max-width: 767px) {
+    h2 {
+      font-size: 3rem; } }
+  @media screen and (min-width: 47.9375em) {
     h2 {
       font-size: 6.5vw; } }
   @media screen and (min-width: 80em) {
@@ -4681,7 +4697,7 @@ a.view-more.up {
 
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
-   PAGE SPECIFIC STYLES 
+   PAGE STYLES 
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 /* SHARED ELEMENTS
@@ -4710,15 +4726,15 @@ a.view-more.up {
   color: #fff;
   text-align: center;
   padding-top: 3rem;
-  height: 50vh; }
+  padding-left: 3vw;
+  padding-right: 3vw;
+  height: 40vh; }
   @media screen and (min-width: 28.75em) {
     .block-skew {
-      padding-top: 4rem;
-      height: 40vh; } }
+      padding-top: 4rem; } }
   @media screen and (min-width: 47.9375em) {
     .block-skew {
-      padding-top: 5rem;
-      height: 35vh; } }
+      padding-top: 5rem; } }
 
 .block-skew:after {
   background: inherit;
@@ -5263,65 +5279,68 @@ figcaption a.btn-play:hover {
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 .padding-x-x-3-x {
-  padding-bottom: 3vh; }
+  padding-bottom: 3vw; }
 
 .padding-x-3-x-3 {
   padding-left: 3vw;
   padding-right: 3vw; }
 
 .padding-0-0-3-0 {
-  padding: 0 0 3vh 0; }
+  padding: 0 0 3vw 0; }
 
 .padding-3-0-0-0 {
-  padding: 3vh 0 0 0; }
+  padding: 3vw 0 0 0; }
 
 .padding-3-0-3-0 {
-  padding: 3vh 0; }
+  padding: 3vw 0; }
 
 .padding-3-x-x-x {
-  padding-top: 3vh; }
+  padding-top: 3vw; }
 
 .padding-0-0-4-0 {
-  padding-bottom: 4vh; }
+  padding-bottom: 4vw; }
 
 .padding-x-x-4-x {
-  padding-bottom: 4vh; }
+  padding-bottom: 4vw; }
 
 .padding-4-x-x-x {
-  padding-top: 4vh; }
+  padding-top: 4vw; }
 
 .padding-4-0-0-0 {
-  padding-top: 4vh; }
+  padding-top: 4vw; }
 
 .padding-4-0-4-0 {
-  padding: 4vh 0; }
+  padding: 4vw 0; }
 
 .padding-6-0-6-0 {
-  padding: 6vh 0; }
+  padding: 6vw 0; }
 
 .padding-7-0-7-0 {
-  padding: 7vh 0; }
+  padding: 7vw 0; }
 
 .padding-7-3-7-3 {
-  padding: 7vh 3vw; }
+  padding: 7vw 3vw; }
 
 .padding-8-0-0-0 {
-  padding: 8vh 0 0 0; }
+  padding: 8vw 0 0 0; }
 
 .padding-8-0-8-0 {
-  padding: 8vh 0; }
+  padding: 8vw 0; }
 
 .padding-12-0-3-0 {
-  padding: 12vh 0 3vh 0; }
+  padding: 12vw 0 3vw 0; }
 
 .padding-12-4-12-4 {
-  padding: 12vh 4vw; }
+  padding: 12vw 4vw; }
+
+.padding-15-0-7-0 {
+  padding: 15vw 0 7vw 0; }
+
+.padding-15-0-3-0 {
+  padding: 15vw 0 3vw 0; }
 
 .padding-15-10-15-10 {
-  padding: 15vh 10vw; }
-
-.padding-18-0-7-0 {
-  padding: 18vh 0 7vh 0; }
+  padding: 15vw 10vw; }
 
 .margin-x-x-0-x {
   margin-bottom: 0; }
