--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -1,6 +1,6 @@
 /* |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
   
-   PAGE SPECIFIC STYLES 
+   PAGE STYLES 
    
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| */
 
@@ -30,16 +30,16 @@
 	color: #fff;
 	text-align: center;
 	padding-top: 3rem;
-	height: 50vh;
+	padding-left: 3vw;
+	padding-right: 3vw;
+	height: 40vh;
 
 	@include breakpoint(medium) {
 		padding-top: 4rem;
-		height: 40vh;
 	}
 
 	@include breakpoint(large) {
 		padding-top: 5rem;
-		height: 35vh;
 	}
 
 }
