--- a/_scss/custom/_type.scss
+++ b/_scss/custom/_type.scss
@@ -38,12 +38,27 @@ h1 {
 	}
 }
 
-.sham-modal h1, 
-.news-highlights h1,
-.news-article h1 {
+.sham-modal h1 {
 	
 	@include breakpoint(medium) {
 		font-size: 7.5vw;
+	}
+	@include breakpoint(large) {
+		font-size: 6.5vw;
+	}
+	@include breakpoint(xlarge) {
+		font-size: 5rem;
+	}
+}
+
+.news-highlights h1,
+.news-article h1 {
+	
+	@media screen and (max-width: 600px) {
+		font-size: 2.2rem;
+	}
+	@media screen and (min-width: 601px) and (max-width: 767px) {
+		font-size: 3rem;
 	}
 	@include breakpoint(large) {
 		font-size: 6.5vw;
@@ -81,9 +96,14 @@ h1 {
 
 h2 {
 	font-family: "adobe-caslon-pro",serif;
-	font-size: 2.1rem;
-   
-	@include breakpoint(medium) {
+
+	@media screen and (max-width: 600px) {
+		font-size: 2.2rem;
+	}
+	@media screen and (min-width: 601px) and (max-width: 767px) {
+		font-size: 3rem;
+	}
+	@include breakpoint(large) {
 		font-size: 6.5vw;
 	}
 	@include breakpoint(xlarge) {
