--- a/_assets/css/app.css
+++ b/_assets/css/app.css
@@ -4735,13 +4735,17 @@ a.view-more.up {
   @media screen and (min-width: 47.9375em) {
     .block-skew {
       padding-top: 5rem; } }
+  @media screen and (min-width: 28.75em) and (max-width: 47.875em) {
+    .block-skew {
+      height: 60vh;
+      padding-top: 6rem; } }
 
 .block-skew:after {
   background: inherit;
   bottom: 0;
   content: '';
   display: block;
-  height: 50%;
+  height: 90%;
   left: 0;
   position: absolute;
   right: 0;
@@ -4758,6 +4762,19 @@ a.view-more.up {
 
 .block-skew h1 {
   color: #fff; }
+
+.block-bkgrd-img {
+  position: relative;
+  height: 66vw;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover; }
+  @media screen and (min-width: 28.75em) {
+    .block-bkgrd-img {
+      height: 36vw; } }
+  @media screen and (min-width: 80em) {
+    .block-bkgrd-img {
+      height: 27rem; } }
 
 .dark-gray {
   background-color: #151f25; }
@@ -4777,106 +4794,6 @@ a.view-more.up {
 .warm-gray-5 {
   background-color: #f5f5f6; }
 
-.slant-wrap {
-  position: relative;
-  width: 100%;
-  height: 50vh;
-  margin-bottom: 5rem; }
-
-.slant-head {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  padding-top: 5rem; }
-
-.slant-head span {
-  position: relative;
-  top: 0;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: center; }
-
-.slant-head h1 {
-  color: #fff; }
-
-.slant-foot {
-  position: absolute;
-  content: '';
-  left: 0px;
-  right: 0px;
-  top: 50vh;
-  border-width: 1rem 50vw;
-  margin-left: -20px;
-  margin-right: 15px;
-  border-style: solid;
-  border-color: #3a454b #fff #fff #3a454b;
-  box-sizing: border-box; }
-  @media screen and (min-width: 28.75em) {
-    .slant-foot {
-      border-width: 1.5rem 50vw; } }
-  @media screen and (min-width: 47.9375em) {
-    .slant-foot {
-      border-width: 2rem 50vw; } }
-  @media screen and (min-width: 80em) {
-    .slant-foot {
-      border-width: 2.5rem 50vw; } }
-
-.slant-foot.borders-dark-gray {
-  border-top-color: #151f25;
-  border-left-color: #151f25; }
-
-.slant-foot.borders-warm-gray-1 {
-  border-top-color: #3a454b;
-  border-left-color: #3a454b; }
-
-.slant-foot.borders-warm-gray-2 {
-  border-top-color: #8b8782;
-  border-left-color: #8b8782; }
-
-.slant-foot.borders-warm-gray-3 {
-  border-top-color: #c4c0bd;
-  border-left-color: #c4c0bd; }
-
-.slant-foot.borders-warm-gray-4 {
-  border-top-color: #e6e4e3;
-  border-left-color: #e6e4e3; }
-
-.slant-foot.borders-warm-gray-5 {
-  border-top-color: #f5f5f6;
-  border-left-color: #f5f5f6; }
-
-/*
-
-@media screen and (max-width: 800px) and (orientation: landscape) {
-
-	.slant-wrap {
-		height: 60vh;
-	}
-	.slant-foot {
-		top: 60vh;
-	}
-}
-*/
 .vertical-center {
   display: -webkit-box;
   display: -webkit-flex;
@@ -5026,12 +4943,18 @@ img.full-width {
 .story-header h6 {
   color: #fff; }
 
-.story-company-logo img {
-  padding: 3rem 0;
+.story-logo-vert-center img {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   max-width: 50vw;
   max-height: 50vw; }
   @media screen and (min-width: 28.75em) {
-    .story-company-logo img {
+    .story-logo-vert-center img {
       padding: 0;
       max-width: 25vw;
       max-height: 25vw; } }
@@ -5326,6 +5249,12 @@ figcaption a.btn-play:hover {
 
 .padding-8-0-8-0 {
   padding: 8vw 0; }
+
+.padding-10-0-10-0 {
+  padding: 10vw 0; }
+  @media screen and (min-width: 47.9375em) {
+    .padding-10-0-10-0 {
+      padding: 8rem 0 8rem 0; } }
 
 .padding-12-0-3-0 {
   padding: 12vw 0 3vw 0; }
