--- a/_scss/custom/_pages.scss
+++ b/_scss/custom/_pages.scss
@@ -41,6 +41,11 @@
 	@include breakpoint(large) {
 		padding-top: 5rem;
 	}
+	
+	@include breakpoint(medium only landscape) {
+		height: 60vh;
+		padding-top: 6rem;
+	}
 
 }
 
@@ -49,7 +54,7 @@
 	bottom: 0;
 	content: '';
 	display: block;
-	height: 50%;
+	height: 90%;
 	left: 0;
 	position: absolute;
 	right: 0;
@@ -65,6 +70,29 @@
 .block-skew h1 {
 	color: #fff;
 }
+
+.block-bkgrd-img {
+	position: relative;
+	height: 66vw;
+ 	background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    
+	@include breakpoint(medium) {
+		height: 36vw;
+	}
+	
+	@include breakpoint(xlarge) {
+		height: 27rem;
+	}
+	
+
+}
+
+
+
+
+
 
 
 
@@ -98,129 +126,6 @@
 
 
 
-// slant block .........................................................
-
-.slant-wrap {
-	position: relative;
-	width: 100%;
-	height: 50vh; // depth here must match top of slant foot
-	margin-bottom: 5rem;
-}
-
-.slant-head {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top:0;
-	bottom: 0;
-	padding-top: 5rem;
-}
-
-.slant-head span {
-	position: relative;
-	top: 0;
-	bottom: 0;
-	height: 100%;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-}
-			
-.slant-head h1 {
-	color: #fff;
-}
-
-.slant-foot {
-	position: absolute;
-	content: '';
-	left: 0px;
-	right: 0px;
-	top: 50vh;
-	border-width: 1rem 50vw;
-	margin-left: -20px;
-	margin-right: 15px;
-	border-style: solid;
-	border-color: $warm-gray-1 #fff #fff $warm-gray-1;
-	box-sizing: border-box;
-	
-	// change angle based on width so it does not flatten out
-
-	@include breakpoint(medium) {
-		border-width: 1.5rem 50vw;
-	}
-
-	@include breakpoint(large) {
-		border-width: 2rem 50vw;
-	}
-
-	@include breakpoint(xlarge) {
-		border-width: 2.5rem 50vw;
-	}
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-// colors for slant borders ............................................
-
-.slant-foot.borders-dark-gray {
-	border-top-color: $dark-gray;
-	border-left-color: $dark-gray;
-}
-
-.slant-foot.borders-warm-gray-1 {
-	border-top-color: $warm-gray-1;
-	border-left-color: $warm-gray-1;
-}
-
-.slant-foot.borders-warm-gray-2 {
-	border-top-color: $warm-gray-2;
-	border-left-color: $warm-gray-2;
-}
-
-.slant-foot.borders-warm-gray-3 {
-	border-top-color: $warm-gray-3;
-	border-left-color: $warm-gray-3;
-}
-
-.slant-foot.borders-warm-gray-4 {
-	border-top-color: $warm-gray-4;
-	border-left-color: $warm-gray-4;
-}
-
-.slant-foot.borders-warm-gray-5 {
-	border-top-color: $warm-gray-5;
-	border-left-color: $warm-gray-5;
-}
-
-
-
-
-// change slant wrap height for small landscape view ...................
-/*
-
-@media screen and (max-width: 800px) and (orientation: landscape) {
-
-	.slant-wrap {
-		height: 60vh;
-	}
-	.slant-foot {
-		top: 60vh;
-	}
-}
-*/
 
 
 // flex box vertical center ............................................
@@ -423,9 +328,12 @@ img.full-width {
 	color: #fff;
 }
 
-
-.story-company-logo img {
-	padding: 3rem 0;
+.story-logo-vert-center img {
+	margin: 0;
+	position: absolute; 
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 	max-width: 50vw;
 	max-height: 50vw;
 	
