--- a/_scss/custom/_spacing.scss
+++ b/_scss/custom/_spacing.scss
@@ -74,6 +74,14 @@
 	padding: 8vw 0;
 }
 
+.padding-10-0-10-0 {
+	padding: 10vw 0;
+	
+	@include breakpoint(large) {
+		padding: 8rem 0 8rem 0;
+	}
+}
+
 .padding-12-0-3-0 {
 	padding: 12vw 0 3vw 0;
 }
