--- a/_scss/custom/_filters.scss
+++ b/_scss/custom/_filters.scss
@@ -209,6 +209,13 @@
 }
 
 
+// for js ...........................................
+
+.hide { 
+	display: none;
+}
+
+
 
 // temporary for development ...........................................
 
